# IR_detect

./: CMakeLists.txt  output.avi  red_detect.cpp
